fix spacing for ie

--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ footer ul li { float:left; padding-right:30px; }
 .v2 footer ul{width: 960px;margin: auto;display: block;padding-top:8px;}
 .v2 #social{clear:both;padding:45px 0 40px 95px;}
 .v2 #signup{
-  width: 390px;
+  width: 400px;
   height: 95px;
   position:fixed;
   left: 50%;
